# scanmem

./: Dockerfile  build.sh  gameconqueror.flatpak  org.scanmem.gameconqueror.yml
gui/: org.scanmem.gameconqueror.desktop.in
gui/icons/: Makefile.am
